@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed dropping liquid buckets in the fluid opcodes
+
 1.9.3:
 - Needs McJtyLib 3.1.0
 - Support for COFH RF API is removed. Only Forge Energy is supported now
